--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             </div>
                             <div class="hide-content">
                                 <p>Curabitur id eros vehicula, tincidunt libero eu, lobortis mi. In mollis eros a posuere imperdiet. Donec maximus elementum ex. Cras convallis ex rhoncus, laoreet libero eu, vehicula libero.</p>
-                                <a href="#about">More Info</a>
+                                <a href="#courses">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -105,13 +105,13 @@
                 <div class="col-md-12">
                     <div id="tabs">
                         <ul class="about-ul">
-                            <li id="education"><a href="#about">best education<br><i class="fa-solid fa-square"></i></a></li>
-                            <li id="management"><a href="#about">top management<br><i class="fa-solid fa-square"></i></a></li>
-                            <li id="meeting"><a href="#about">quality meeting<br><i class="fa-solid fa-square"></i></a></li>
+                            <li><a id="education" href="#about">best education<br><i id="square1" class="fa-solid fa-square active"></i></a></li>
+                            <li><a id="management" href="#about">top management<br><i id="square2" class="fa-solid fa-square"></i></a></li>
+                            <li><a id="meeting" href="#about">quality meeting<br><i id="square3" class="fa-solid fa-square"></i></a></li>
                         </ul>
                     </div>
                     <div class="contents">
-                        <div id="tab1">
+                        <div id="content1">
                             <div class="row">
                                 <div class="col-md-6"><img src="tab1.png" alt=""></div>
                                 <div class="col-md-6">
@@ -120,21 +120,23 @@
                                 </div>
                             </div>
                         </div>
-                        <div id="tab2" >
+                        <div id="content2" >
                             <div class="row">
                                 <div class="col-md-6"><img src="tab2.png" alt=""></div>
                                 <div class="col-md-6">
-                                    <h4>Top management</h4>
-                                    <p>Grad School is free educational HTML template with Bootstrap 4.5.2 CSS layout. Feel free to use it for educational or commercial purposes. You may want to make a little donation to TemplateMo. Please tell your friends about us. Thank you.</p>
+                                    <h4>Top Level</h4>
+                                    <p>You can modify this HTML layout by editing contents and adding more pages as you needed. Since this template has options to add dropdown menus, you can put many HTML pages.</p>
+                                    <br>
+                                    <p>Suspendisse tincidunt, magna ut finibus rutrum, libero dolor euismod odio, nec interdum quam felis non ante.</p>
                                 </div>
                             </div>
                         </div>
-                        <div id="tab3" >
+                        <div id="content3" >
                             <div class="row">
                                 <div class="col-md-6"><img src="tab3.png" alt=""></div>
                                 <div class="col-md-6">
-                                    <h4>quality meeting</h4>
-                                    <p>Grad School is free educational HTML template with Bootstrap 4.5.2 CSS layout. Feel free to use it for educational or commercial purposes. You may want to make a little donation to TemplateMo. Please tell your friends about us. Thank you.</p>
+                                    <h4>Quality Meeting</h4>
+                                    <p>You are NOT allowed to redistribute this template ZIP file on any template collection website. However, you can use this template to convert into a specific theme for any kind of CMS platform such as WordPress. For more information, you shall contact TemplateMo now.</p>
                                 </div>
                             </div>
                         </div>
@@ -203,10 +205,89 @@
                         <h2>Choose Your Course</h2>
                     </div>
                 </div>
+                <div class="col-md-12">
+
+                </div>
             </div>
         </div>
     </section>
+    <section id="video">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 align-self-center">
+                    <div class="left-content">
+                        <h3>OUR PRESENTATION IS FOR YOU</h3>
+                        <h4>Watch the video to learn more <span>about Grad School</span></h4>
+                        <p>
+                            You are NOT allowed to redistribute this template ZIP file on any template collection website. However, 
+                            you can use this template to convert into a specific theme for any kind of CMS platform such as WordPress. 
+                            You may <a href="https://templatemo.com/contact"> contact TemplateMo </a>for details.
+                            <br><br>
+                            Suspendisse tincidunt, magna ut finibus rutrum, libero dolor euismod odio, nec interdum quam felis non ante.
+                        </p>
+                        <div class="but">
+                            <a href="https://www.facebook.com/templatemo">External url</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <article class="video-item">
+                        <div class="video-caption">
+                            <h4>power html template</h4>
+                            <a href="https://www.youtube.com/watch?v=r9LtOG6pNUw"  class="play">
+                                <i class="fa-sharp fa-solid fa-circle-play"></i>
+                            </a>
+                        </div>
+                        <figure>
+                            <a href="https://www.youtube.com/watch?v=r9LtOG6pNUw"  class="play">
+                                <img src="video.png" alt="">
+                            </a>
+                        </figure>
+                    </article>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="heading">
+                        <h2>Let's Keep In Touch</h2>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <form action="#" class="contact">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <input type="text" id="name" placeholder="Your Name" required>
+                            </div>
+                            <div class="col-md-6">
+                                <input type="email" id="email" placeholder="Your Email" required>
+                            </div>
+                            <div class="col-md-12">
+                                <textarea type="text" rows="6" id="msg" placeholder="Your message..." required></textarea>
+                            </div>
+                            <div class="col-md-12">
+                                <button type="submit">send message now</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-md-6">
+                    <div class="map"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <hr>
+    <footer>
+        <div class="container">
+            <p> <i class="fa-regular fa-copyright"></i>
+                COPYRIGHT 2020 BY GRAD SCHOOL | DESIGN: 
+                <a href="https://templatemo.com">TEMPLATEMO</a></p>
+        </div>
+    </footer>
     <script src="gradschool.js"></script>
 </body>
-
 </html>
