--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="col-md-12">
                     <div id="tabs">
                         <ul class="about-ul">
-                            <li><a id="education" href="#about">best education<br><i id="square1" class="fa-solid fa-square active"></i></a></li>
+                            <li><a id="education" href="#about">best education<br><i id="square1" class="fa-solid fa-square"></i></a></li>
                             <li><a id="management" href="#about">top management<br><i id="square2" class="fa-solid fa-square"></i></a></li>
                             <li><a id="meeting" href="#about">quality meeting<br><i id="square3" class="fa-solid fa-square"></i></a></li>
                         </ul>
@@ -205,8 +205,75 @@
                         <h2>Choose Your Course</h2>
                     </div>
                 </div>
-                <div class="col-md-12">
-
+                <div class="col-md-12 course-card">
+                    <div class="col-md-4">
+                    <div class="card">
+                        <div class="img">
+                            <img src="course1.avif" alt="">
+                        </div>
+                        <div class="card-header">
+                            digital arts
+                        </div>
+                        <div class="card-body">
+                            <p>This is a simple card example. You can customize the content here.</p>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="col-md-4">
+                     <div class="card">
+                        <div class="img">
+                            <img src="course2.avif" alt="">
+                        </div>
+                        <div class="card-header">
+                            digital arts
+                        </div>
+                        <div class="card-body">
+                            <p>This is a simple card example. You can customize the content here.</p>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="col-md-4">
+                     <div class="card">
+                        <div class="img">
+                            <img src="course3.avif" alt="">
+                        </div>
+                        <div class="card-header">
+                            digital arts
+                        </div>
+                        <div class="card-body">
+                            <p>This is a simple card example. You can customize the content here.</p>
+                        </div>
+                    </div>
+                    </div>
+                    </div>
+                    <div class="col-md-12">
+                    <div class="col-md-4">
+                     <div class="card">
+                        <div class="img">
+                            <img src="course1.avif" alt="">
+                        </div>
+                        <div class="card-header">
+                            digital arts
+                        </div>
+                        <div class="card-body">
+                            <p>This is a simple card example. You can customize the content here.</p>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="col-md-4">
+                     <div class="card">
+                        <div class="img">
+                            <img src="course2.avif" alt="">
+                        </div>
+                        <div class="card-header">
+                            digital arts
+                        </div>
+                        <div class="card-body">
+                            <p>This is a simple card example. You can customize the content here.</p>
+                        </div>
+                    </div>
+                    </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -214,7 +281,7 @@
     <section id="video">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 align-self-center">
+                <div class="col-md-6">
                     <div class="left-content">
                         <h3>OUR PRESENTATION IS FOR YOU</h3>
                         <h4>Watch the video to learn more <span>about Grad School</span></h4>
@@ -275,7 +342,8 @@
                     </form>
                 </div>
                 <div class="col-md-6">
-                    <div class="map"></div>
+                    <div class="map">
+                    </div>
                 </div>
             </div>
         </div>
